--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>London Underground</title>
+  <title>Underground Tube Status</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-  <script
-    type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-  </script>
-  <script
-    type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-compat/3.0.0-alpha1/jquery.min.js">
-  </script>
-
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-compat/3.0.0-alpha1/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
 </head>
 
 <body>
-  <h1>London Underground</h1>
 
+  <div class="logo-title">
+    <img class="logo" src="images/logo.svg" alt="">
+    <h1 class="text-align">Underground Tube Status</h1>
+  </div>
 
+<div class="tube-list">
   <span class="bakerloo"></span>
   <h2 class="title">Bakerloo</h2>
   <h3 class="statusbakerloo"></h3>
@@ -71,6 +70,9 @@
   <span class="waterloo"></span>
   <h2 class="title">Waterloo & City</h2>
   <h3 class="statuswaterloo"></h3>
+</div>
+
+
 
 </body>
 </html>
