update font + logo

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>Underground Tube Status</title>
+  <title>Live Status</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-compat/3.0.0-alpha1/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <div class="logo-title">
     <img class="logo" src="images/logo.svg" alt="">
-    <h1 class="text-align">Underground Tube Status</h1>
+    <h1 class="text-align">Live Status</h1>
   </div>
 
 <div class="tube-list">
@@ -56,6 +57,11 @@
   <span class="northern"></span>
   <h2 class="title">Northern</h2>
   <h3 class="statusnorthern"></h3>
+
+
+  <span class="overground"></span>
+  <h2 class="title">London Overground</h2>
+  <h3 class="statusoverground"></h3>
 
 
   <span class="piccadilly"></span>
