--- a/index.html
+++ b/index.html
@@ -15,68 +15,85 @@
 
   <div class="logo-title">
     <img class="logo" src="images/logo.svg" alt="">
-    <h1 class="text-align">Live Status</h1>
+    <h1 class="text-centerd">Live Status</h1>
   </div>
 
 <div class="tube-list">
-  <span class="bakerloo"></span>
-  <h2 class="title">Bakerloo</h2>
-  <h3 class="statusbakerloo"></h3>
-
-
-  <span class="central"></span>
-  <h2 class="title">Central</h2>
-  <h3 class="statuscentral"></h3>
-
-
-  <span class="circle"></span>
-  <h2 class="title">Circle</h2>
-  <h3 class="statuscircle"></h3>
-
-
-  <span class="district"></span>
-  <h2 class="title">District</h2>
-  <h3 class="statusdistrict"></h3>
-
-
-  <span class="hammersmith"></span>
-  <h2 class="title">Hammersmith & City</h2>
-  <h3 class="statushammersmith"></h3>
-
-
-  <span class="jubilee"></span>
-  <h2 class="title">Jubilee</h2>
-  <h3 class="statusjubilee"></h3>
-
-
-  <span class="metropolitan"></span>
-  <h2 class="title">Metropolitan</h2>
-  <h3 class="statusmetropolitan"></h3>
-
-
-  <span class="northern"></span>
-  <h2 class="title">Northern</h2>
-  <h3 class="statusnorthern"></h3>
-
-
-  <span class="overground"></span>
-  <h2 class="title">London Overground</h2>
-  <h3 class="statusoverground"></h3>
-
-
-  <span class="piccadilly"></span>
-  <h2 class="title">Piccadilly</h2>
-  <h3 class="statuspiccadilly"></h3>
-
-
-  <span class="victoria"></span>
-  <h2 class="title">Victoria</h2>
-  <h3 class="statusvictoria"></h3>
-
-  <span class="waterloo"></span>
-  <h2 class="title">Waterloo & City</h2>
-  <h3 class="statuswaterloo"></h3>
+  <div class="tube">
+    <span class="bakerloo"></span>
+    <h2 class="title">Bakerloo</h2>
+    <h3 class="statusbakerloo"></h3>
+  </div>
+  <div class="tube">
+    <span class="central"></span>
+    <h2 class="title">Central</h2>
+    <h3 class="statuscentral"></h3>
+  </div>
+  <div class="tube">
+    <span class="circle"></span>
+    <h2 class="title">Circle</h2>
+    <h3 class="statuscircle"></h3>
+  </div>
 </div>
+
+
+<div class="tube-list">
+  <div class="tube">
+    <span class="district"></span>
+    <h2 class="title">District</h2>
+    <h3 class="statusdistrict"></h3>
+  </div>
+  <div class="tube">
+    <span class="hammersmith"></span>
+    <h2 class="title">Hammersmith & City</h2>
+    <h3 class="statushammersmith"></h3>
+  </div>
+  <div class="tube">
+    <span class="jubilee"></span>
+    <h2 class="title">Jubilee</h2>
+    <h3 class="statusjubilee"></h3>
+  </div>
+</div>
+
+
+<div class="tube-list">
+  <div class="tube">
+    <span class="metropolitan"></span>
+    <h2 class="title">Metropolitan</h2>
+    <h3 class="statusmetropolitan"></h3>
+  </div>
+  <div class="tube">
+    <span class="northern"></span>
+    <h2 class="title">Northern</h2>
+    <h3 class="statusnorthern"></h3>
+  </div>
+  <div class="tube">
+      <span class="overground"></span>
+      <h2 class="title">London Overground</h2>
+      <h3 class="statusoverground"></h3>
+    </div>
+</div>
+
+
+<div class="tube-list">
+  <div class="tube">
+      <span class="piccadilly"></span>
+      <h2 class="title">Piccadilly</h2>
+      <h3 class="statuspiccadilly"></h3>
+    </div>
+  <div class="tube">
+    <span class="victoria"></span>
+    <h2 class="title">Victoria</h2>
+    <h3 class="statusvictoria"></h3>
+  </div>
+  <div class="tube">
+    <span class="waterloo"></span>
+    <h2 class="title">Waterloo & City</h2>
+    <h3 class="statuswaterloo"></h3>
+  </div>
+</div>
+
+
 
 
 
