--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
   </div>
 
 <div class="tube-list">
-  <div class="tube">
+  <div class="col-4">
     <span class="bakerloo"></span>
     <h2 class="title">Bakerloo</h2>
     <h3 class="statusbakerloo"></h3>
   </div>
-  <div class="tube">
+  <div class="col-4">
     <span class="central"></span>
     <h2 class="title">Central</h2>
     <h3 class="statuscentral"></h3>
   </div>
-  <div class="tube">
+  <div class="col-4">
     <span class="circle"></span>
     <h2 class="title">Circle</h2>
     <h3 class="statuscircle"></h3>
@@ -38,17 +38,17 @@
 
 
 <div class="tube-list">
-  <div class="tube">
+  <div class="col-4">
     <span class="district"></span>
     <h2 class="title">District</h2>
     <h3 class="statusdistrict"></h3>
   </div>
-  <div class="tube">
+  <div class="col-4">
     <span class="hammersmith"></span>
     <h2 class="title">Hammersmith & City</h2>
     <h3 class="statushammersmith"></h3>
   </div>
-  <div class="tube">
+  <div class="col-4">
     <span class="jubilee"></span>
     <h2 class="title">Jubilee</h2>
     <h3 class="statusjubilee"></h3>
@@ -57,17 +57,17 @@
 
 
 <div class="tube-list">
-  <div class="tube">
+  <div class="col-4">
     <span class="metropolitan"></span>
     <h2 class="title">Metropolitan</h2>
     <h3 class="statusmetropolitan"></h3>
   </div>
-  <div class="tube">
+  <div class="col-4">
     <span class="northern"></span>
     <h2 class="title">Northern</h2>
     <h3 class="statusnorthern"></h3>
   </div>
-  <div class="tube">
+  <div class="col-4">
       <span class="overground"></span>
       <h2 class="title">London Overground</h2>
       <h3 class="statusoverground"></h3>
@@ -76,17 +76,17 @@
 
 
 <div class="tube-list">
-  <div class="tube">
+  <div class="col-4">
       <span class="piccadilly"></span>
       <h2 class="title">Piccadilly</h2>
       <h3 class="statuspiccadilly"></h3>
     </div>
-  <div class="tube">
+  <div class="col-4">
     <span class="victoria"></span>
     <h2 class="title">Victoria</h2>
     <h3 class="statusvictoria"></h3>
   </div>
-  <div class="tube">
+  <div class="col-4">
     <span class="waterloo"></span>
     <h2 class="title">Waterloo & City</h2>
     <h3 class="statuswaterloo"></h3>
