Grid and layout
Fixed grid and layout issues

--- a/index.html
+++ b/index.html
@@ -12,90 +12,77 @@
 </head>
 
 <body>
-
-  <div class="logo-title">
+  <div class="logo-wrapper">
     <img class="logo" src="images/logo.svg" alt="">
-    <h1 class="text-centerd">Live Status</h1>
   </div>
-
-<div class="tube-list">
-  <div class="col-4">
-    <span class="bakerloo"></span>
-    <h2 class="title">Bakerloo</h2>
-    <h3 class="statusbakerloo"></h3>
-  </div>
-  <div class="col-4">
-    <span class="central"></span>
-    <h2 class="title">Central</h2>
-    <h3 class="statuscentral"></h3>
-  </div>
-  <div class="col-4">
-    <span class="circle"></span>
-    <h2 class="title">Circle</h2>
-    <h3 class="statuscircle"></h3>
-  </div>
-</div>
-
-
-<div class="tube-list">
-  <div class="col-4">
-    <span class="district"></span>
-    <h2 class="title">District</h2>
-    <h3 class="statusdistrict"></h3>
-  </div>
-  <div class="col-4">
-    <span class="hammersmith"></span>
-    <h2 class="title">Hammersmith & City</h2>
-    <h3 class="statushammersmith"></h3>
-  </div>
-  <div class="col-4">
-    <span class="jubilee"></span>
-    <h2 class="title">Jubilee</h2>
-    <h3 class="statusjubilee"></h3>
-  </div>
-</div>
-
-
-<div class="tube-list">
-  <div class="col-4">
-    <span class="metropolitan"></span>
-    <h2 class="title">Metropolitan</h2>
-    <h3 class="statusmetropolitan"></h3>
-  </div>
-  <div class="col-4">
-    <span class="northern"></span>
-    <h2 class="title">Northern</h2>
-    <h3 class="statusnorthern"></h3>
-  </div>
-  <div class="col-4">
-      <span class="overground"></span>
-      <h2 class="title">London Overground</h2>
-      <h3 class="statusoverground"></h3>
+  <h1 class="title">Live Status</h1>
+  <div class="tube-list">
+    <div class="tube">
+      <span class="bakerloo"></span>
+      <h2 class="tube-title">Bakerloo</h2>
+      <h3 class="statusbakerloo"></h3>
     </div>
-</div>
-
-
-<div class="tube-list">
-  <div class="col-4">
-      <span class="piccadilly"></span>
-      <h2 class="title">Piccadilly</h2>
-      <h3 class="statuspiccadilly"></h3>
+    <div class="tube">
+      <span class="central"></span>
+      <h2 class="tube-title">Central</h2>
+      <h3 class="statuscentral"></h3>
     </div>
-  <div class="col-4">
-    <span class="victoria"></span>
-    <h2 class="title">Victoria</h2>
-    <h3 class="statusvictoria"></h3>
+    <div class="tube">
+      <span class="circle"></span>
+      <h2 class="tube-title">Circle</h2>
+      <h3 class="statuscircle"></h3>
+    </div>
+    <div class="tube">
+      <span class="district"></span>
+      <h2 class="tube-title">District</h2>
+      <h3 class="statusdistrict"></h3>
+    </div>
+    <div class="tube">
+      <span class="hammersmith"></span>
+      <h2 class="tube-title">Hammersmith & City</h2>
+      <h3 class="statushammersmith"></h3>
+    </div>
+    <div class="tube">
+      <span class="jubilee"></span>
+      <h2 class="tube-title">Jubilee</h2>
+      <h3 class="statusjubilee"></h3>
+    </div>
+    <div class="tube">
+      <span class="metropolitan"></span>
+      <h2 class="tube-title">Metropolitan</h2>
+      <h3 class="statusmetropolitan"></h3>
+    </div>
+    <div class="tube">
+      <span class="northern"></span>
+      <h2 class="tube-title">Northern</h2>
+      <h3 class="statusnorthern"></h3>
+    </div>
+    <div class="tube">
+        <span class="overground"></span>
+        <h2 class="tube-title">London Overground</h2>
+        <h3 class="statusoverground"></h3>
+      </div>
+    <div class="tube">
+          <span class="piccadilly"></span>
+          <h2 class="tube-title">Piccadilly</h2>
+          <h3 class="statuspiccadilly"></h3>
+      </div>
+    <div class="tube">
+        <span class="victoria"></span>
+        <h2 class="tube-title">Victoria</h2>
+        <h3 class="statusvictoria"></h3>
+    </div>
+    <div class="tube">
+        <span class="waterloo"></span>
+        <h2 class="tube-title">Waterloo & City</h2>
+        <h3 class="statuswaterloo"></h3>
+    </div>
   </div>
-  <div class="col-4">
-    <span class="waterloo"></span>
-    <h2 class="title">Waterloo & City</h2>
-    <h3 class="statuswaterloo"></h3>
+
+  <!-- Button to refresh API -->
+  <div class="button-wrapper">
+    <button onclick="" class="button" type="button">Refresh</button>
   </div>
-</div>
-
-
-
-
 
 </body>
 </html>
