--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 </head>
 
 <body>
+<!-- logo at the top -->
   <div class="logo-wrapper">
     <img class="logo" src="images/logo.svg" alt="">
   </div>
-  <h1 class="title">Live Status</h1>
+
+  <!-- wrapper of tube list -->
   <div class="tube-list">
     <div class="tube">
       <span class="bakerloo"></span>
