--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <img class="logo" src="images/logo.svg" alt="">
   </div>
 
-  <!-- wrapper of tube list -->
-  <div class="tube-list">
+  <!-- trains list -->
+  <div class="list">
     <div class="tube">
       <span class="bakerloo"></span>
       <h2 class="tube-title">Bakerloo</h2>
@@ -38,6 +38,11 @@
       <span class="district"></span>
       <h2 class="tube-title">District</h2>
       <h3 class="statusdistrict"></h3>
+    </div>
+    <div class="tube">
+          <span class="dlr"></span>
+          <h2 class="tube-title">DLR</h2>
+          <h3 class="statusdlr"></h3>
     </div>
     <div class="tube">
       <span class="hammersmith"></span>
@@ -70,6 +75,16 @@
           <h3 class="statuspiccadilly"></h3>
       </div>
     <div class="tube">
+        <span class="tfl-rail"></span>
+        <h2 class="tube-title">Tfl Rail</h2>
+        <h3 class="statusrail"></h3>
+    </div>
+    <div class="tube">
+        <span class="tram"></span>
+        <h2 class="tube-title">Tram</h2>
+        <h3 class="statustram"></h3>
+    </div>
+    <div class="tube">
         <span class="victoria"></span>
         <h2 class="tube-title">Victoria</h2>
         <h3 class="statusvictoria"></h3>
@@ -82,9 +97,9 @@
   </div>
 
   <!-- Button to refresh API -->
-  <div class="button-wrapper">
+  <!-- <div class="button-wrapper">
     <button onclick="" class="button" type="button">Refresh</button>
-  </div>
+  </div> -->
 
 </body>
 </html>
