Added map, colour codes added
Added button for maps
New page for map
Jacascript now shows different colour for tube status

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <img class="logo" src="images/logo.svg" alt="">
   </div>
 
+  <!-- Button to see map -->
+  <div class="sticky-button">
+    <button onclick="location.href='maps.html'" class="button" type="button">Map</button>
+  </div>
+
   <!-- trains list -->
   <div class="list">
     <div class="tube">
@@ -96,10 +101,6 @@
     </div>
   </div>
 
-  <!-- Button to refresh API -->
-  <!-- <div class="button-wrapper">
-    <button onclick="" class="button" type="button">Refresh</button>
-  </div> -->
 
 </body>
 </html>
