--- a/maps.html
+++ b/maps.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
