Added intro text

--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 
   <!-- Button to see map -->
   <div class="sticky-button">
-    <button onclick="location.href='maps.html'" class="button" type="button">Map</button>
+    <button onclick="location.href='maps.html'" class="button" type="button">Tube map</button>
   </div>
+
+<!-- Intro text -->
+<div class="content-width">
+  <h1>Everything is looking 👌 apart from</h1>
+</div>
 
   <!-- trains list -->
   <div class="list">
