--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- Button to see map -->
   <div class="sticky-button">
-    <button onclick="location.href='maps.html'" class="button" type="button">Tube map</button>
+    <button onclick="location.href='maps.html'" class="button" type="button">Maps</button>
   </div>
 
 <!-- Intro text -->
