--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   </div>
 
   <!-- Button to see map -->
-  <div class="sticky-button">
+  <!-- <div class="sticky-button">
     <button onclick="location.href='maps.html'" class="button" type="button">Maps</button>
-  </div>
+  </div> -->
 
 <!-- Intro text -->
 <div class="content-width">
