--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>Live Status</title>
+  <title>Live Tube Status</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<!-- logo at the top -->
+  <!-- logo at the top -->
   <div class="logo-wrapper">
     <img class="logo" src="images/logo.svg" alt="">
   </div>
@@ -23,15 +23,14 @@
     <button onclick="location.href='maps.html'" class="button" type="button">Maps</button>
   </div> -->
 
-<!-- Intro text -->
-<div class="content-width">
+  <!-- Intro text -->
+  <div class="content-width">
   <h1>Everything is looking 👌 apart from</h1>
-</div>
+  </div>
 
   <!-- trains list -->
   <div class="list">
   </div>
-
 
 </body>
 </html>
