--- a/privacy.html
+++ b/privacy.html
@@ -5,9 +5,6 @@
   <title>Live Tube Status</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-compat/3.0.0-alpha1/jquery.min.js"></script>
-  <script src="js/scripts.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -20,17 +17,20 @@
 
   <!-- Button to see map -->
   <div class="sticky-button">
-    <button onclick="location.href='privacy.html'" class="button" type="button">Privacy</button>
+    <button onclick="location.href='index.html'" class="button" type="button">Status</button>
   </div>
 
-  <!-- Intro text -->
   <div class="content-width">
-  <h1>Everything is looking 👌 apart from</h1>
+  <h1>Respecting your privacy is in our core.</h1>
+
+  <h2>The Tube app is owned equally by Matthew Higgins and Jing Lau <br> The app does not collect any data and no third parties have access to our app.
+  <h2>Any questions or concerns then please <a href="mailto: thetubeapp@gmail.com">contact</a> us</h2>
+
+  <h3>Last updated: 21st July 2019</h3>
+
+
   </div>
 
-  <!-- trains list -->
-  <div class="list">
-  </div>
 
 </body>
 </html>
