--- a/privacy.html
+++ b/privacy.html
@@ -23,10 +23,10 @@
   <div class="content-width">
   <h1>Respecting your privacy is in our core.</h1>
 
-  <h2>The Tube app is owned equally by Matthew Higgins and Jing Lau <br> The app does not collect any data and no third parties have access to our app.
-  <h2>Any questions or concerns then please <a href="mailto: thetubeapp@gmail.com">contact</a> us</h2>
+  <h2>The Tube app is owned equally by Matthew Higgins and Jing Lau. <br> The app does not collect any data and no third parties have access to our app.
+  <h2>Any questions or concerns then please <a href="mailto: thetubeapp@gmail.com">contact</a> us.</h2>
 
-  <h3>Last updated: 21st July 2019</h3>
+  <h3>Last updated: 21st July 2019.</h3>
 
 
   </div>
